--- a/src/app/aerolinea/aerolinea-detail/aerolinea-detail.component.html
+++ b/src/app/aerolinea/aerolinea-detail/aerolinea-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5" *ngIf="aerolinea">
-  <div class="card shadow">
+  <div class="card">
     <div class="card-body">
       <h2 class="card-title text-center mb-4">{{ aerolinea.airlineName }}</h2>
 
